--- a/package.json
+++ b/package.json
@@ -10,14 +10,15 @@
   },
   "dependencies": {
     "@emotion/is-prop-valid": "latest",
+    "@heroui/react": "^2.7.9",
     "@radix-ui/react-slot": "^1.0.2",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
-    "framer-motion": "latest",
+    "framer-motion": "^12.16.0",
     "lucide-react": "^0.294.0",
     "next": "14.2.16",
-    "react": "^18",
-    "react-dom": "^18",
+    "react": "^19.1.0",
+    "react-dom": "^19.1.0",
     "tailwind-merge": "^2.0.0"
   },
   "devDependencies": {
